# vibe-keyboard

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  README.md  architecture.md  design-brief.md  interaction-flows.md  run.sh  solution.md  start-dev.sh
crates/vk-core/: Cargo.toml
crates/vk-core/src/: lib.rs  sounds.rs
crates/vk-daemon/: Cargo.toml
crates/vk-daemon/src/: cesp.rs  config.rs  discovery.rs  keystroke.rs  lib.rs  local_speaker.rs  main.rs  permission.rs  setup.rs  terminal.rs  transcript.rs
crates/vk-daemon/src/focus/: error.rs  generic.rs  ghostty.rs  iterm.rs  macos.rs  mod.rs  vscode.rs  warp.rs
crates/vk-daemon/src/notification/: mac_native.rs  mod.rs
crates/vk-daemon/src/server/: api.rs  ipc_handler.rs  mod.rs  render.rs  scanner.rs  state.rs
crates/vk-daemon/src/session/: mod.rs  monitor.rs  store.rs
crates/vk-daemon/tests/: server_integration.rs
crates/vk-display/: Cargo.toml
crates/vk-display/src/: color.rs  framebuffer.rs
crates/vk-input/: Cargo.toml
crates/vk-input/src/: button.rs  encoder.rs  led.rs  lib.rs  mock.rs  speaker.rs
crates/vk-protocol/: Cargo.toml
crates/vk-protocol/fuzz/: Cargo.toml
crates/vk-protocol/fuzz/fuzz_targets/: decode_downlink.rs  decode_uplink.rs
crates/vk-protocol/src/: codec.rs  message.rs
crates/vk-simulator/: Cargo.toml
crates/vk-simulator/src/: main.rs  sim_display.rs  sim_input.rs  sim_led.rs  sim_speaker.rs
crates/vk-transport/: Cargo.toml
crates/vk-transport/src/: channel.rs  ipc.rs  lib.rs  transport.rs
crates/vk-transport/tests/: e2e.rs  integration.rs  ipc_e2e.rs
crates/vk-ui/: Cargo.toml
crates/vk-ui/src/: animation.rs  event.rs  lib.rs  renderer.rs  screen.rs  widget.rs
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  main.tsx  tokens.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: ActivityLog.tsx  BindingsPanel.tsx  ConfigPanel.tsx  Screen.tsx  SetupPanel.tsx  SoundPanel.tsx  VirtualKeyboard.tsx  shared.tsx
docs/: README.md  api.md  development.md  io-map.md  todo.md
ideas/vibe-keyboard/: brief.md  changelog.md
ideas/vibe-keyboard/research/: bom-cost-2026-03-31.md  competitive-analysis-2026-03-31.md  gtm-strategy-2026-03-31.md  launch-case-studies-2026-03-31.md  market-size-2026-03-31.md  pricing-analysis-2026-03-31.md
scripts/: demo.sh  start.sh  tmux-dev.sh  tmux-m3.sh  tmux-m4.sh  tmux-m5.sh
