[workspace]
resolver = "2"
members = [
    "crates/vk-core",
    "crates/vk-protocol",
    "crates/vk-display",
    "crates/vk-input",
    "crates/vk-ui",
    "crates/vk-transport",
    "crates/vk-simulator",
    "crates/vk-daemon",
    "desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Adancurusul/vibe-keyboard"

[workspace.dependencies]
vk-core = { path = "crates/vk-core" }
vk-protocol = { path = "crates/vk-protocol" }
vk-transport = { path = "crates/vk-transport" }
vk-display = { path = "crates/vk-display" }
vk-input = { path = "crates/vk-input" }
vk-ui = { path = "crates/vk-ui" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
axum = "0.8"
glob-match = "0.2"
toml = "0.8"
