[package]
name = "vk-daemon"
description = "Vibe Keyboard daemon — session monitoring, IPC server, permission handling"
version.workspace = true
edition.workspace = true

[dependencies]
vk-core = { workspace = true, features = ["serde"] }
vk-protocol = { workspace = true }
vk-transport = { workspace = true }
vk-ui = { workspace = true }
vk-display = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
glob-match = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
bytes = "1"
dirs = "5"
rodio = "0.20"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4.44", features = ["clock"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"

[dev-dependencies]
tempfile = "3"
